# GomokuAI

./: .gitignore  GomokuAI.pyproj  GomokuAI.sln  LICENSE  ZobristKey.h  config.py  readme.md
Core/: Core.vcxproj  Core.vcxproj.filters
Core/src/: Game.hpp  MCTS.hpp  play.cpp
StaticLib1/: StaticLib1.vcxproj  stdafx.cpp
Test/Core/: CoreTest.vcxproj  board_integrationtest.cpp  board_unittest.cpp  pch.cpp  pch.h  player_unittest.cpp  position_unittest.cpp
Utils/: Board.cpp  MCTS.cpp
agents/: __init__.py  agent.py  alphazero.py  alphazero_agent.py  botzone.py  botzone_agent.py  human.py  mcts.py  mcts_agent.py  utils.py
core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters  UCTAlgorithms.h  __init__.py
core/include/: Game.h  MCTS.h
core/interface/: Agent.h  CMakeLists.txt  CoreInterface.vcxproj  CoreInterface.vcxproj.filters  Interface.h  main.cpp
core/lib/: CMakeLists.txt  CoreLib.vcxproj  CoreLib.vcxproj.filters
core/lib/include/: Algorithms.h  Game.h  MCTS.h  Mapping.h  Minimax.h  Pattern.h
core/lib/include/algorithms/: Default.h  Handicraft.h  Heuristic.hpp  Minimax.hpp  MonteCarlo.hpp  RAVE.h  Statistical.hpp
core/lib/include/handicrafts/: Evaluator.h  MSTree.h  Pattern.h  Utilities.h
core/lib/include/policies/: AlphaZero.h  Default.h  PoolRAVE.h  Random.h  Traditional.h
core/lib/src/: ACAutomata.cpp  ACAutomata.h  Evaluator.cpp  Game.cpp  MCTS.cpp  Mapping.cpp  Minimax.cpp  Pattern.cpp
core/lib/src/utils/: ACAutomata.cpp  ACAutomata.h  Persistence.cpp  Persistence.h
core/py_ext/: CMakeLists.txt  CorePyExt.vcxproj  CorePyExt.vcxproj.filters  core.cpp  game_ext.cpp  game_ext.hpp  mcts_ext.hpp  module.cpp  pch.h  policy_ext.hpp
core/py_ext/src/: game_ext.hpp  mcts_ext.hpp
core/src/: Game.cpp  Game.hpp  MCTS.cpp  MCTS.hpp  play.cpp
core/test/: CMakeLists.txt  CoreTest.vcxproj  CoreTest.vcxproj.filters  boardmap_unittest.cpp  evaluator_integrationtest.cpp  patternsearch_unittest.cpp  pch.h  readme.md
core/test/integration/: board_integrationtest.cpp
core/test/unit/: mcts_unittest.cpp  player_unittest.cpp  position_unittest.cpp
core/ui/: Agent.h  CoreUI.vcxproj  CoreUI.vcxproj.filters  Interface.h  console.cpp  main.cpp
docs/: config.json  index.md  navigation.md
docs/pages/: Final Report.md  Introduction.md
network/: __init__.py  data_helper.py  model_keras.py  model_tf.py  train.py
test/: test_network.py
test/core/: CoreTest.vcxproj
(+22 files in other folders)
